datafin/cmd/datafin/k8s/03-middleware.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  namespace: kube-system
  name: strip-datafin-prefix
spec:
  stripPrefix:
    prefixes:
      - /api/datafin
      - /api/df
