datafin/cmd/datafin/k8s/02-datafin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: kube-system
  name: datafin
  annotations:
    "sidecar.jaegertracing.io/inject": "true"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: datafin
  template:
    metadata:
      labels:
        app: datafin
    spec:
      containers:
        - name: datafin
          # image: bright/datafin:latest
          image: bright/datafin:latest
          imagePullPolicy: Never
          volumeMounts:
            - name: service-config
              mountPath: /etc/datafin
      volumes:
        - name: service-config
          configMap:
            name: datafin-config
---
apiVersion: v1
kind: Service
metadata:
  namespace: kube-system
  name: datafin
spec:
  ports:
    - name: http
      port: 30140
      targetPort: 30140
    - name: grpc
      port: 30141
      targetPort: 30141
    - name: healthz
      port: 30142
      targetPort: 30142
    - name: pprof
      port: 6062
      targetPort: 6062
  selector:
    app: datafin
