datafin/cmd/datafin/k8s/04-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: kube-system
  name: datafin-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik-internet"
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares:
      kube-system-strip-datafin-prefix@kubernetescrd,
      kube-system-head-cors@kubernetescrd,
      kube-system-headers-userid-to-body@kubernetescrd,
      kube-system-headers-login-token-to-body@kubernetescrd,
      kube-system-user-role-rbac-auth@kubernetescrd
spec:
  rules:
    - host:
      http:
        paths:
          - path: /api/datafin/
            pathType: Prefix
            backend:
              service:
                name: datafin
                port:
                  number: 30140
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: kube-system
  name: datafin-ingress-trace
  annotations:
    kubernetes.io/ingress.class: "traefik-internet"
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares:
      kube-system-strip-datafin-prefix@kubernetescrd,
      kube-system-head-cors@kubernetescrd

spec:
  rules:
    - host:
      http:
        paths:
          - path: /api/datafin/
            pathType: Prefix
            backend:
              service:
                name: datafin
                port:
                  number: 30140
